# Rovey_Mobile_Robot

Hardware_Codes/: PID_ESP32_USB_SERIAL_ROS2_GUI_TCP_IMU_DIAG__copy_20260618051121.ino  PI_node_BUZZER_OBSTACLE_V3_TOY_8S_4S_BEEP3_FINAL_CORRECTED_V2 (1).py  (+3 more)
SIM/toys_collector_description/: CMakeLists.txt  package.xml
SIM/toys_collector_description/config/: ros2_controllers.yaml
SIM/toys_collector_description/meshes/: front_left_wheel.STL  front_right_wheel.STL  link_2_of_mechanism.STL  right_grip.STL
SIM/toys_collector_description/urdf/mech/: single_wheel.urdf.xacro
toys_collector/: package.xml
toys_collector_gazebo/: package.xml
toys_collector_gazebo/launch/: toys_collector_gazebo.launch.py
toys_collector_gazebo/models/aws_robomaker_residential_Carpet_01_visual_only/: model.sdf
toys_collector_gazebo/models/aws_robomaker_residential_DeskPortraitA_02/meshes/: aws_DeskPortraitA_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_DeskPortraitB_01/meshes/: aws_DeskPortraitB_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_DeskPortraitC_02/meshes/: aws_DeskPortraitC_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_DeskPortraitD_01/meshes/: aws_DeskPortraitD_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_Door_01_visual_only/: model.sdf
toys_collector_gazebo/models/aws_robomaker_residential_PortraitA_02/meshes/: aws_PortraitA_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_PortraitC_01/meshes/: aws_PortraitC_01_visual.DAE
toys_collector_gazebo/models/aws_robomaker_residential_RoomWindow_01_visual_only/: model.config
toys_collector_gazebo/models/aws_robomaker_residential_ShoeRack_01/: model.sdf
toys_collector_gazebo/models/aws_robomaker_residential_Vase_01_visual_only/: model.sdf
toys_collector_gazebo/models/toys_collector_description/: model.config  model.sdf
(+44 files in other folders)
